jellyfish-cli/com.ngc.seaside.jellyfish/src/test/resources/invalid-grammar-project/src/main/sd/com/ngc/seaside/classifier/datatype/Classification.sd
package com.ngc.seaside.classifier.datatype

data Classification {
	int trackId
	int objectType {
		"enummmeration": {
			"FISH_HEAD": 0,
			"BACKBONE": 1,
			"FIN": 2,
			"TAIL": 3
		}
	}
}